--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
+    <meta
+      name="Description"
+      content="Your library organized with the snap of your fingers."
+    />
+    <base href="/" />
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="Description" content="Put your description here.">
-  <base href="/">
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+        background-color: #ededed;
+      }
+    </style>
+    <title>booksnap-frontend</title>
+  </head>
 
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background-color: #ededed;
-    }
-  </style>
-  <title>booksnap-frontend</title>
-</head>
+  <body>
+    <booksnap-frontend></booksnap-frontend>
 
-<body>
-  <booksnap-frontend></booksnap-frontend>
-
-  <script type="module" src="./src/booksnap-frontend.js"></script>
-</body>
-
+    <script type="module" src="./src/booksnap-frontend.js"></script>
+  </body>
 </html>
