refactor: change naming convention

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </head>
 
   <body>
-    <booksnap-frontend></booksnap-frontend>
+    <booksnap-app></booksnap-app>
 
-    <script type="module" src="./src/booksnap-frontend.js"></script>
+    <script type="module" src="./src/BooksnapApp.js"></script>
   </body>
 </html>
