feat - add barecode scanner

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       content="Your library organized with the snap of your fingers."
     />
     <base href="/" />
-
     <style>
       html,
       body {
@@ -21,12 +20,11 @@
         background-color: #ededed;
       }
     </style>
-    <title>booksnap-frontend</title>
+    <title>booksnap-app</title>
   </head>
 
   <body>
     <booksnap-app></booksnap-app>
-
     <script type="module" src="./src/BooksnapApp.js"></script>
   </body>
 </html>
