--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
   <body>
     <booksnap-app></booksnap-app>
-    <script type="module" src="./src/BooksnapApp.js"></script>
+    <script type="module" src="./src/booksnap-app.js"></script>
   </body>
 </html>
