--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       body {
         margin: 0;
         padding: 0;
+        min-height: 100vh;
+        min-height: 100dvh;
         font-family: sans-serif;
         background-color: #ededed;
       }
