--- a/index.html
+++ b/index.html
@@ -11,17 +11,7 @@
       content="Your library organized with the snap of your fingers."
     />
     <base href="/" />
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        min-height: 100vh;
-        min-height: 100dvh;
-        font-family: sans-serif;
-        background-color: #ededed;
-      }
-    </style>
+    <link rel="stylesheet" href="/src/styles.css" type="text/css" />
     <title>booksnap-app</title>
   </head>
 
