feat: add new font for logo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     />
     <base href="/" />
     <link rel="stylesheet" href="/src/styles.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Boogaloo&display=swap"
+      rel="stylesheet"
+    />
     <title>booksnap-app</title>
   </head>
 
